set background color of navbar same as the logo to avoid contrast

--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,7 @@ header {
 
 .left-right-container {
   padding: 0 10px;
-  background-color: #f72210;
+  background-color: #FF0500;
   color: white;
   text-decoration: none;
   font-size: 1.5rem;
